syntax = "proto3";
package protos.connectors;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "protos/base.proto";

message JenkinsAppsAssetOptions {
  repeated string apps = 1; // Names of apps
}

message JenkinsAppsAssetModel {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue class_name = 2;
}

message JenkinsAssetModel{
  google.protobuf.UInt64Value id = 1;
  Source connector_type = 2;
  SourceModelType type = 3;
  sfixed64 last_updated = 4;
  oneof asset {
    JenkinsAppsAssetModel jenkins_apps = 101;
  }
}

message JenkinsAssets {
  repeated JenkinsAssetModel assets = 1;
}
